tests/NormalTests/paczka1/fuzzy1/15284444.err
Error in line 10: S44 S329 319,9
Error in line 18: WHcglPskC S329 80,6
Error in line 30: pkr1gXJdnr S102 71,6
Error in line 31: S44 S102 32,4
